# steamos-compositor-plus

./: LICENSE  Makefile.am  README.md  configure.ac  steamos-install.sh
debian/: changelog  control  copyright  rules
etc/steamos-compositor-plus/: sxhkdrc
src/: steamcompmgr.c
usr/lib/systemd/user/: sxhkd.service
usr/share/applications/: steam-browser.desktop
usr/share/xsessions/: steamos.desktop
