AC_INIT([SteamOS Compostitor Plus], [1.0], [aleshslovak@gmail.com], [steamos-compositor-plus], [https://github.com/gamer-os/steamos-compositor-plus/])
AM_INIT_AUTOMAKE([foreign tar-ustar])
PKG_CHECK_MODULES([DEPS],xxf86vm gl x11 xrender xcomposite SDL_image libudev xext xdamage)

AC_PROG_CC
AC_PROG_CC_STDC

AC_OUTPUT([Makefile])
